assign1/tests/type-checking/bad/void-var.c
#include "FenneC.h"

void func() {}

int main() {
  void x = func();
}